--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,17 @@
     <string name="morph_vertical_offset">Morph Vertical Offset:</string>
     <string name="value_dp">%ddp</string>
 
+
+    <string name="toolbar_title">Light Jeans\nRegulat Fit</string>
+
+    <string name="product_price">$200.00</string>
+    <string name="product_state">In Stock</string>
+    <string name="product_description_title">Description</string>
+    <string name="product_description">There are many variations of passages of Lorem Ipsum text available, but the majority have.</string>
+    <string name="product_colors_title">Colors:</string>
+    <string name="product_buy_button_text">Get Code</string>
+
+
     <string name="item_nature_title">Nature %d</string>
 
     <string name="label_loading">This Is Empty View</string>
