--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">Android UI App</string>
+    <string name="app_name">Android Material Libraries</string>
     <string name="enter_title" tools:ignore="ExtraTranslation">Enter Title</string>
 
 
